--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
             <span class="header__logo">ED</span>
            
             <nav class="nav">
-                <a href="./pages/tab.html" class="nav__item">Головна</a>
+                <a href="./index.html" class="nav__item">Головна</a>
                 <a href="#footer" class="nav__item">Контакти</a>
                 <a href="./pages/sponsors.html" class="nav__item">Спонсори</a>
             </nav>
