--- a/src/pages/lessons.html
+++ b/src/pages/lessons.html
@@ -109,8 +109,15 @@
             <p>Курс аналітичної хімії надає знання про методи аналізу речовин та їх компонентів. Ми вивчимо якісні та кількісні методи аналізу, такі як хроматографія, спектроскопія та інші.</p>
         </div>
     </div>
-    
-
+    <div class="sidebar">
+        <div class="season-icon">
+          <i id="seasonIcon" class="fas"></i>
+        </div>
+        <div class="current-date">
+          <span id="date"></span>
+        </div>
+      </div>
+      <script type="module" src="../js/tab.js"></script>
     <script type="module" src="../js/lessons.js"></script>
     <script>
         document.addEventListener("DOMContentLoaded", () => {
