--- a/src/pages/lessons2.html
+++ b/src/pages/lessons2.html
@@ -44,7 +44,15 @@
     <div id="lessonContent">
     </div>
   </div>
-
+  <div class="sidebar">
+    <div class="season-icon">
+      <i id="seasonIcon" class="fas"></i>
+    </div>
+    <div class="current-date">
+      <span id="date"></span>
+    </div>
+  </div>
+  <script type="module" src="../js/tab.js"></script>
   <script src="../js/learning2.js"></script> 
 </body>
 
