--- a/src/pages/settings.html
+++ b/src/pages/settings.html
@@ -69,7 +69,15 @@
       </div>
     </div>
   </div>
-
+  <div class="sidebar">
+    <div class="season-icon">
+      <i id="seasonIcon" class="fas"></i>
+    </div>
+    <div class="current-date">
+      <span id="date"></span>
+    </div>
+  </div>
+  <script type="module" src="../js/tab.js"></script>
   <script src="../js/settings.js" type="module">
     
   </script>
