--- a/src/pages/sponsors.html
+++ b/src/pages/sponsors.html
@@ -39,6 +39,15 @@
         <a id="previous" class="arrow">&#10094</a>
         <a id="next" class="arrow">&#10095</a>
     </div>
+    <div class="sidebar">
+        <div class="season-icon">
+          <i id="seasonIcon" class="fas"></i>
+        </div>
+        <div class="current-date">
+          <span id="date"></span>
+        </div>
+      </div>
     <script type="module" src="../js/sponsors.js"></script>
+    <script type="module" src="../js/tab.js"></script>
 </body>
 </html>
