--- a/src/pages/dashboard.html
+++ b/src/pages/dashboard.html
@@ -8,105 +8,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="../sass/main.scss">
   <title>Document</title>
-  <style>
-    .tab__list__item a {
-      display: inline-block;
-      padding: 10px;
-      border-radius: 50%;
-      transition: background-color 0.3s ease, border 0.3s ease;
-      border: 2px solid transparent;
-    }
-
-    .tab__list__item a.active {
-      width: 25px;
-      height: 25px;
-    }
-
-    .dashboard__title {
-      font-size: 64px;
-      margin-top: 40px;
-    }
-
-    .dashboard__box {
-      margin-top: 100px;
-      display: flex;
-      align-items: center;
-    }
-
-    .dashboard__box__description {
-      width: 438px;
-      margin-left: 31px;
-    }
-
-    .dashboard__benefits {
-      margin-top: 50px;
-      display: flex;
-      justify-content: space-around;
-      flex-wrap: wrap;
-      gap: 20px;
-    }
-
-    .benefit {
-      background-color: #f5f5f5;
-      padding: 20px;
-      border-radius: 8px;
-      max-width: 300px;
-      flex: 1;
-      text-align: center;
-    }
-
-    .benefit img {
-      max-width: 100%;
-      border-radius: 8px;
-    }
-
-    .benefit__description {
-      margin-top: 10px;
-    }
-
-    .dashboard__footer {
-      position: fixed;
-      width: 100%;
-      bottom: 0;
-      right: 0;
-    }
-
-    .modal {
-      display: none;
-      position: fixed;
-      z-index: 1;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      overflow: auto;
-      background-color: rgba(0, 0, 0, 0.4);
-      backdrop-filter: blur(5px);
-    }
-
-    .modal-content {
-      background-color: #fefefe;
-      margin: 10% auto;
-      padding: 20px;
-      border-radius: 10px;
-      width: 60%;
-      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-    }
-
-    .close {
-      color: #aaa;
-      float: right;
-      font-size: 28px;
-      font-weight: bold;
-    }
-
-    .close:hover,
-    .close:focus {
-      color: black;
-      text-decoration: none;
-      cursor: pointer;
-    }
-  </style>
 </head>
 <body class="tab__body">
   <div class="tab">
@@ -143,7 +44,7 @@
     </p>
   </div>
 
-  <div class="dashboard__benefits">
+  <!-- <div class="dashboard__benefits">
     <div class="benefit">
       <img src="../images/hero-background.jpg" alt="Benefit 1" />
       <p class="benefit__description">
@@ -162,8 +63,10 @@
         EdTech сприяє розвитку навичок самостійного навчання та критичного мислення.
       </p>
     </div>
-  </div>
+  </div> -->
 
+
+  <script type="module" src="../js/tab.js"></script>
   <script src="../js/dashboard.js"></script>
   <script>
     document.addEventListener("DOMContentLoaded", () => {
@@ -178,6 +81,60 @@
           link.classList.remove('active');
         }
       });
+
+      const calendarDays = document.getElementById('calendarDays');
+      const calendarMonth = document.getElementById('calendarMonth');
+      const prevMonth = document.getElementById('prevMonth');
+      const nextMonth = document.getElementById('nextMonth');
+
+      let currentDate = new Date();
+      let currentMonth = currentDate.getMonth();
+      let currentYear = currentDate.getFullYear();
+
+      function renderCalendar(month, year) {
+        calendarDays.innerHTML = '';
+        calendarMonth.textContent = new Date(year, month).toLocaleString('default', { month: 'long', year: 'numeric' });
+
+        const firstDay = new Date(year, month, 1).getDay();
+        const daysInMonth = new Date(year, month + 1, 0).getDate();
+
+        for (let i = 0; i < firstDay; i++) {
+          const emptyDay = document.createElement('div');
+          calendarDays.appendChild(emptyDay);
+        }
+
+        for (let i = 1; i <= daysInMonth; i++) {
+          const dayElement = document.createElement('div');
+          dayElement.textContent = i;
+          dayElement.classList.add('calendar__day');
+
+          if (i === currentDate.getDate() && month === currentMonth && year === currentYear) {
+            dayElement.classList.add('calendar__day--active');
+          }
+
+          calendarDays.appendChild(dayElement);
+        }
+      }
+
+      prevMonth.addEventListener('click', () => {
+        currentMonth--;
+        if (currentMonth < 0) {
+          currentMonth = 11;
+          currentYear--;
+        }
+        renderCalendar(currentMonth, currentYear);
+      });
+
+      nextMonth.addEventListener('click', () => {
+        currentMonth++;
+        if (currentMonth > 11) {
+          currentMonth = 0;
+          currentYear++;
+        }
+        renderCalendar(currentMonth, currentYear);
+      });
+
+      renderCalendar(currentMonth, currentYear);
     });
   </script>
 </body>
