--- a/src/pages/lessons3.html
+++ b/src/pages/lessons3.html
@@ -129,7 +129,15 @@
     <!-- <button id="completeLessonButton">Завершити урок</button> -->
   </div>
 
-
+  <div class="sidebar">
+    <div class="season-icon">
+      <i id="seasonIcon" class="fas"></i>
+    </div>
+    <div class="current-date">
+      <span id="date"></span>
+    </div>
+  </div>
+  <script type="module" src="../js/tab.js"></script>
   <script>
     document.addEventListener("DOMContentLoaded", () => {
       const lessons = [
