--- a/src/pages/rewiews.html
+++ b/src/pages/rewiews.html
@@ -79,6 +79,15 @@
             <button type="submit">Надіслати відгук</button>
         </form>
     </section>
+    <div class="sidebar">
+        <div class="season-icon">
+          <i id="seasonIcon" class="fas"></i>
+        </div>
+        <div class="current-date">
+          <span id="date"></span>
+        </div>
+      </div>
+      <script type="module" src="../js/tab.js"></script>
     <script type="module" src="../js/reviews/reviewsSystem.js"></script>
     <script>
         document.addEventListener("DOMContentLoaded", () => {
