--- a/src/pages/courses.html
+++ b/src/pages/courses.html
@@ -1,93 +1,131 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../sass/main.scss">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../sass/main.scss" />
     <title>Document</title>
     <style>
-        .tab__list__item a {
-            display: inline-flex;
-            align-items: center;
-            justify-content: center;
-            width: 40px; /* Устанавливаем ширину и высоту, чтобы создать круг */
-            height: 40px;
-            border-radius: 50%;
-            transition: background-color 0.3s ease, border 0.3s ease;
-            text-decoration: none; /* Убираем подчеркивание у ссылок */
-            border: 2px solid transparent; /* Задаем прозрачный бордер, чтобы сохранить размер */
-        }
+      .tab__list__item a {
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        transition: background-color 0.3s ease, border 0.3s ease;
+        text-decoration: none;
+        border: 2px solid transparent;
+      }
 
-        .tab__list__item a.active {
-            background-color: #007bff;
-            border: 2px solid #0056b3;
-        }
+      .tab__list__item a.active {
+        background-color: #007bff;
+        border: 2px solid #0056b3;
+      }
     </style>
-</head>
-<body class="tab__body">
+  </head>
+  <body class="tab__body">
     <div class="tab">
-        <a href="../index.html"><span class="tab__logo__text">ED</span></a>
-        <a  href="../pages/dashboard.html">
-            <img class="tab__mainicon" src="../svg/dashboard.svg" alt="" />
-        </a>
-        <ul class="tab__list">
-            <li class="tab__list__item">
-                <a href="./courses.html">
-                    <img class="tab__list__item__svg" src="../svg/school.svg" alt="School" />
-                </a>
-            </li>
-            <li class="tab__list__item">
-                <a href="./lessons.html">
-                    <img class="tab__list__item__svg" src="../svg/emoji_objects.svg" alt="Emoji Objects" />
-                </a>
-            </li>
-            <li class="tab__list__item">
-                <a href="./rewiews.html">
-                    <img class="tab__list__item__svg" src="../svg/chat.svg" alt="Chat" />
-                </a>
-            </li>
-        </ul>
-        <a href="../pages/settings.html" id="profileCircle" class="profile-circle"></a>
+      <a href="../index.html"><span class="tab__logo__text">ED</span></a>
+      <a href="../pages/dashboard.html">
+        -<img class="tab__mainicon" src="../svg/dashboard.svg" alt="" />
+      </a>
+      <ul class="tab__list">
+        <li class="tab__list__item">
+          <a href="./courses.html">
+            <img
+              class="tab__list__item__svg"
+              src="../svg/school.svg"
+              alt="School"
+            />
+          </a>
+        </li>
+        <li class="tab__list__item">
+          <a href="./lessons.html">
+            <img
+              class="tab__list__item__svg"
+              src="../svg/emoji_objects.svg"
+              alt="Emoji Objects"
+            />
+          </a>
+        </li>
+        <li class="tab__list__item">
+          <a href="./rewiews.html">
+            <img
+              class="tab__list__item__svg"
+              src="../svg/chat.svg"
+              alt="Chat"
+            />
+          </a>
+        </li>
+      </ul>
+      <a href="../pages/settings.html" id="profileCircle" class="profile-circle"
+        >-</a
+      >
     </div>
     <button id="showCourses" class="course-button">Показати курси</button>
     <div class="added-courses" id="addedCourses">
-        <h3>Додані курси:</h3>
+      <h3>Додані курси:</h3>
     </div>
     <div id="courseModal" class="modal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <h2>Виберіть курс</h2>
-            <ul id="courseList">
-                <li class="course-list-item"><a href="../pages/lessons1.html" class="course-link" data-id="1" data-name="Хімія 101">Хімія 101</a></li>
-                <li class="course-list-item"><a href="../pages/lessons2.html" class="course-link" data-id="2" data-name="Органічна хімія">Органічна хімія</a></li>
-                <li class="course-list-item"><a href="../pages/lessons3.html" class="course-link" data-id="3" data-name="Аналітична хімія">Аналітична хімія</a></li>
-            </ul>
-        </div>
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <h2>Виберіть курс</h2>
+        <ul id="courseList">
+          <li class="course-list-item">
+            <a
+              href="../pages/lessons1.html"
+              class="course-link"
+              data-id="1"
+              data-name="Хімія 101"
+              >Хімія 101</a
+            >
+          </li>
+          <li class="course-list-item">
+            <a
+              href="../pages/lessons2.html"
+              class="course-link"
+              data-id="2"
+              data-name="Органічна хімія"
+              >Органічна хімія</a
+            >
+          </li>
+          <li class="course-list-item">
+            <a
+              href="../pages/lessons3.html"
+              class="course-link"
+              data-id="3"
+              data-name="Аналітична хімія"
+              >Аналітична хімія</a
+            >
+          </li>
+        </ul>
+      </div>
     </div>
     <div class="sidebar">
-        <div class="season-icon">
-          <i id="seasonIcon" class="fas"></i>
-        </div>
-        <div class="current-date">
-          <span id="date"></span>
-        </div>
+      <div class="season-icon">
+        <i id="seasonIcon" class="fas"></i>
       </div>
-      <script type="module" src="../js/tab.js"></script>
+      <div class="current-date">
+        <span id="date"></span>
+      </div>
+    </div>
+    <script type="module" src="../js/tab.js"></script>
     <script src="../js/courses.js" type="module"></script>
     <script>
-        document.addEventListener("DOMContentLoaded", () => {
-            const currentPath = window.location.pathname.split('/').pop();
-            const tabLinks = document.querySelectorAll('.tab__list__item a');
+      document.addEventListener("DOMContentLoaded", () => {
+        const currentPath = window.location.pathname.split("/").pop();
+        const tabLinks = document.querySelectorAll(".tab__list__item a");
 
-            tabLinks.forEach(link => {
-                const href = link.getAttribute('href').split('/').pop();
-                if (href === currentPath) {
-                    link.classList.add('active');
-                } else {
-                    link.classList.remove('active');
-                }
-            });
+        tabLinks.forEach((link) => {
+          const href = link.getAttribute("href").split("/").pop();
+          if (href === currentPath) {
+            link.classList.add("active");
+          } else {
+            link.classList.remove("active");
+          }
         });
+      });
     </script>
-</body>
+  </body>
 </html>
