--- a/src/pages/dashboard.html
+++ b/src/pages/dashboard.html
@@ -1,141 +1,155 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="../sass/main.scss">
-  <title>Document</title>
-</head>
-<body class="tab__body">
-  <div class="tab">
-    <a href="../index.html"><span class="tab__logo__text">ED</span></a>
-    <a href="../pages/dashboard.html" class="tab__mainicon" style="border: 5px solid #007bff; padding: 10px; background-color: #007bff; border-radius: 50%; padding: 4px;">
-      <img src="../svg/dashboard.svg" alt="" />
-    </a>
-    <ul class="tab__list">
-      <li class="tab__list__item">
-        <a href="./courses.html">
-          <img class="tab__list__item__svg" src="../svg/school.svg" alt="School" />
-        </a>
-      </li>
-      <li class="tab__list__item">
-        <a href="./lessons.html">
-          <img class="tab__list__item__svg" src="../svg/emoji_objects.svg" alt="Emoji Objects" />
-        </a>
-      </li>
-      <li class="tab__list__item">
-        <a href="./rewiews.html">
-          <img class="tab__list__item__svg" src="../svg/chat.svg" alt="Chat" />
-        </a>
-      </li>
-    </ul>
-    <a href="../pages/settings.html" id="profileCircle" class="profile-circle"></a>
-  </div>
-  <h1 class="dashboard__title">Дошка</h1>
-  <div class="dashboard__box">
-    <img src="../images/0124a01a37e43ec5e6393daea45fe935 1.png" alt="" />
-    <p class="dashboard__box__description">
-      EdTech — це сукупність усіх компаній, розробників та інституцій, що
-      створюють продукти і технології для покращення освітніх процесів. Зараз
-      у школах та інститутах навчається понад 20 % населення Землі.
-    </p>
-  </div>
-
-  <!-- <div class="dashboard__benefits">
-    <div class="benefit">
-      <img src="../images/hero-background.jpg" alt="Benefit 1" />
-      <p class="benefit__description">
-        EdTech дозволяє покращити якість навчання за рахунок інноваційних технологій.
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../sass/main.scss" />
+    <title>Document</title>
+  </head>
+  <body class="tab__body">
+    <div class="tab">
+      <a href="../index.html"><span class="tab__logo__text">ED</span></a>
+      <a
+        href="../pages/dashboard.html"
+        class="tab__mainicon"
+        style="
+          border: 5px solid #007bff;
+          padding: 10px;
+          background-color: #007bff;
+          border-radius: 50%;
+          padding: 4px;
+        "
+      >
+        <img src="../svg/dashboard.svg" alt="" />
+      </a>
+      <ul class="tab__list">
+        <li class="tab__list__item">
+          <a href="./courses.html">
+            <img
+              class="tab__list__item__svg"
+              src="../svg/school.svg"
+              alt="School"
+            />
+          </a>
+        </li>
+        <li class="tab__list__item">
+          <a href="./lessons.html">
+            <img
+              class="tab__list__item__svg"
+              src="../svg/emoji_objects.svg"
+              alt="Emoji Objects"
+            />
+          </a>
+        </li>
+        <li class="tab__list__item">
+          <a href="./rewiews.html">
+            <img
+              class="tab__list__item__svg"
+              src="../svg/chat.svg"
+              alt="Chat"
+            />
+          </a>
+        </li>
+      </ul>
+      <a
+        href="../pages/settings.html"
+        id="profileCircle"
+        class="profile-circle"
+      ></a>
+    </div>
+    <h1 class="dashboard__title">Дошка</h1>
+    <div class="dashboard__box">
+      <img src="../images/0124a01a37e43ec5e6393daea45fe935 1.png" alt="" />
+      <p class="dashboard__box__description">
+        EdTech — це сукупність усіх компаній, розробників та інституцій, що
+        створюють продукти і технології для покращення освітніх процесів. Зараз
+        у школах та інститутах навчається понад 20 % населення Землі.
       </p>
     </div>
-    <div class="benefit">
-      <img src="../images/hero-background.jpg" alt="Benefit 2" />
-      <p class="benefit__description">
-        Впровадження EdTech підвищує доступність освіти для всіх вікових груп.
-      </p>
-    </div>
-    <div class="benefit">
-      <img src="../images/hero-background.jpg" alt="Benefit 3" />
-      <p class="benefit__description">
-        EdTech сприяє розвитку навичок самостійного навчання та критичного мислення.
-      </p>
-    </div>
-  </div> -->
 
+    <script type="module" src="../js/tab.js"></script>
+    <script src="../js/dashboard.js"></script>
+    <script>
+      document.addEventListener("DOMContentLoaded", () => {
+        const currentPath = window.location.pathname.split("/").pop();
+        const tabLinks = document.querySelectorAll(".tab__list__item a");
 
-  <script type="module" src="../js/tab.js"></script>
-  <script src="../js/dashboard.js"></script>
-  <script>
-    document.addEventListener("DOMContentLoaded", () => {
-      const currentPath = window.location.pathname.split('/').pop();
-      const tabLinks = document.querySelectorAll('.tab__list__item a');
+        tabLinks.forEach((link) => {
+          const href = link.getAttribute("href").split("/").pop();
+          if (href === currentPath) {
+            link.classList.add("active");
+          } else {
+            link.classList.remove("active");
+          }
+        });
 
-      tabLinks.forEach(link => {
-        const href = link.getAttribute('href').split('/').pop();
-        if (href === currentPath) {
-          link.classList.add('active');
-        } else {
-          link.classList.remove('active');
-        }
-      });
+        const calendarDays = document.getElementById("calendarDays");
+        const calendarMonth = document.getElementById("calendarMonth");
+        const prevMonth = document.getElementById("prevMonth");
+        const nextMonth = document.getElementById("nextMonth");
 
-      const calendarDays = document.getElementById('calendarDays');
-      const calendarMonth = document.getElementById('calendarMonth');
-      const prevMonth = document.getElementById('prevMonth');
-      const nextMonth = document.getElementById('nextMonth');
+        let currentDate = new Date();
+        let currentMonth = currentDate.getMonth();
+        let currentYear = currentDate.getFullYear();
 
-      let currentDate = new Date();
-      let currentMonth = currentDate.getMonth();
-      let currentYear = currentDate.getFullYear();
+        function renderCalendar(month, year) {
+          calendarDays.innerHTML = "";
+          calendarMonth.textContent = new Date(year, month).toLocaleString(
+            "default",
+            { month: "long", year: "numeric" }
+          );
 
-      function renderCalendar(month, year) {
-        calendarDays.innerHTML = '';
-        calendarMonth.textContent = new Date(year, month).toLocaleString('default', { month: 'long', year: 'numeric' });
+          const firstDay = new Date(year, month, 1).getDay();
+          const daysInMonth = new Date(year, month + 1, 0).getDate();
 
-        const firstDay = new Date(year, month, 1).getDay();
-        const daysInMonth = new Date(year, month + 1, 0).getDate();
-
-        for (let i = 0; i < firstDay; i++) {
-          const emptyDay = document.createElement('div');
-          calendarDays.appendChild(emptyDay);
-        }
-
-        for (let i = 1; i <= daysInMonth; i++) {
-          const dayElement = document.createElement('div');
-          dayElement.textContent = i;
-          dayElement.classList.add('calendar__day');
-
-          if (i === currentDate.getDate() && month === currentMonth && year === currentYear) {
-            dayElement.classList.add('calendar__day--active');
+          for (let i = 0; i < firstDay; i++) {
+            const emptyDay = document.createElement("div");
+            calendarDays.appendChild(emptyDay);
           }
 
-          calendarDays.appendChild(dayElement);
-        }
-      }
+          for (let i = 1; i <= daysInMonth; i++) {
+            const dayElement = document.createElement("div");
+            dayElement.textContent = i;
+            dayElement.classList.add("calendar__day");
 
-      prevMonth.addEventListener('click', () => {
-        currentMonth--;
-        if (currentMonth < 0) {
-          currentMonth = 11;
-          currentYear--;
+            if (
+              i === currentDate.getDate() &&
+              month === currentMonth &&
+              year === currentYear
+            ) {
+              dayElement.classList.add("calendar__day--active");
+            }
+
+            calendarDays.appendChild(dayElement);
+          }
         }
+
+        prevMonth.addEventListener("click", () => {
+          currentMonth--;
+          if (currentMonth < 0) {
+            currentMonth = 11;
+            currentYear--;
+          }
+          renderCalendar(currentMonth, currentYear);
+        });
+
+        nextMonth.addEventListener("click", () => {
+          currentMonth++;
+          if (currentMonth > 11) {
+            currentMonth = 0;
+            currentYear++;
+          }
+          renderCalendar(currentMonth, currentYear);
+        });
+
         renderCalendar(currentMonth, currentYear);
       });
-
-      nextMonth.addEventListener('click', () => {
-        currentMonth++;
-        if (currentMonth > 11) {
-          currentMonth = 0;
-          currentYear++;
-        }
-        renderCalendar(currentMonth, currentYear);
-      });
-
-      renderCalendar(currentMonth, currentYear);
-    });
-  </script>
-</body>
+    </script>
+  </body>
 </html>
