--- a/src/pages/lessons3.html
+++ b/src/pages/lessons3.html
@@ -153,31 +153,34 @@
     <script>
       document.addEventListener("DOMContentLoaded", () => {
         const lessons = [
-          {
-            id: 1,
-            name: "Основи аналітичної хімії",
-            content: `Аналітична хімія є галуззю хімії, яка займається вивченням складу речовин і визначенням їхніх компонентів. У цьому уроці ми розглянемо основи аналітичних методів, таких як якісний і кількісний аналіз. Якісний аналіз допомагає виявити присутність певних елементів або сполук у зразку, тоді як кількісний аналіз дозволяє визначити їхню концентрацію. Вивчимо основи лабораторних методів, таких як титрування, спектроскопія та хроматографія. Цей урок надасть знання про основи аналітичних методів і їхнє застосування в науці і промисловості.`,
-          },
-          {
-            id: 2,
-            name: "Методи якісного аналізу",
-            content: `Якісний аналіз в аналітичній хімії є методикою, яка дозволяє визначити наявність певних іонів або молекул у зразку. У цьому уроці ми розглянемо різні методи якісного аналізу, такі як реакції осадження, кольорові реакції і тестування на присутність певних елементів. Вивчимо, як використовувати хімічні реакції для виявлення різних компонентів у зразках. Обговоримо основи роботи з хімічними реактивами, інструментами і техніками, які використовуються для якісного аналізу.`,
-          },
-          {
-            id: 3,
-            name: "Методи кількісного аналізу",
-            content: `Кількісний аналіз в аналітичній хімії дозволяє визначити точну концентрацію компонентів у зразку. У цьому уроці ми розглянемо різні методи кількісного аналізу, включаючи титрування, спектрофотометрію і мас-спектрометрію. Вивчимо основи титрування, техніку додавання реактиву до зразка до досягнення точки еквівалентності. Обговоримо використання спектрофотометрії для вимірювання поглинання світла певної довжини хвилі і мас-спектрометрії для визначення молекулярної маси і складу зразка.`,
-          },
-          {
-            id: 4,
-            name: "Хроматографічні методи",
-            content: `Хроматографія є технікою розділення компонентів суміші на основі їхніх фізико-хімічних властивостей. У цьому уроці ми розглянемо різні види хроматографії, такі як тонкошарова хроматографія (ТСХ), рідинна хроматографія (РХ) і газова хроматографія (ГХ). Вивчимо, як використовувати ці методи для розділення і аналізу компонентів суміші. Обговоримо принципи роботи хроматографічних колонок, стаціонарних і рухомих фаз, а також інтерпретацію хроматографічних даних.`,
-          },
-          {
-            id: 5,
-            name: "Сучасні аналітичні техніки",
-            content: `Сучасні аналітичні техніки постійно розвиваються, впроваджуючи нові методи і інструменти для аналізу речовин. У цьому уроці ми розглянемо новітні технології, такі як атомно-абсорбційна спектроскопія, мас-спектрометрія з індуктивно зв'язаною плазмою і ядерний магнітний резонанс (ЯМР). Вивчимо, як ці техніки використовуються для аналізу різних матеріалів, включаючи біологічні зразки, довкілля і промислові продукти. Обговоримо їхні переваги і обмеження в порівнянні з традиційними методами аналітичної хімії.`,
-          },
+        
+  {
+    "id": 1,
+    "name": "Основи аналітичної хімії",
+    "content": `Аналітична хімія є галуззю хімії, яка займається вивченням складу речовин і визначенням їхніх компонентів. Вона включає кількісний і якісний аналіз, які є основними інструментами для дослідження хімічних систем. Якісний аналіз дозволяє виявити наявність певних елементів або сполук у зразках, тоді як кількісний аналіз забезпечує точну оцінку їх концентрацій. У цьому уроці ми детально розглянемо основи лабораторних методів, таких як титрування, спектроскопія та хроматографія. Титрування використовує реакцію між зразком і реактивом для визначення концентрації компонента. Спектроскопія базується на вимірюванні поглинання або випромінювання світла речовинами для ідентифікації їхніх властивостей. Хроматографія допомагає розділити суміші на окремі компоненти за допомогою їхньої взаємодії з різними фазами. Цей урок надасть фундаментальні знання про ці методи і їх застосування в науці та промисловості, що є важливим для проведення точних хімічних досліджень.`
+  },
+  {
+    "id": 2,
+    "name": "Методи якісного аналізу",
+    "content": `Якісний аналіз є важливою частиною аналітичної хімії, яка дозволяє виявити наявність певних іонів або молекул у зразках. У цьому уроці ми детально розглянемо різні методи якісного аналізу, такі як реакції осадження, кольорові реакції і тестування на присутність конкретних елементів. Реакції осадження допомагають ідентифікувати іони шляхом утворення нерозчинних осадів. Кольорові реакції використовують зміну кольору як індикатор присутності певних сполук. Тестування на елементи включає використання хімічних реактивів для виявлення специфічних елементів у зразках. Вивчимо основи роботи з хімічними реактивами, техніками та інструментами, які використовуються для якісного аналізу. Знання цих методів є критично важливим для проведення досліджень у хімії та біохімії, оскільки вони дозволяють швидко і точно ідентифікувати компоненти зразків.`
+  },
+  {
+    "id": 3,
+    "name": "Методи кількісного аналізу",
+    "content": `Кількісний аналіз в аналітичній хімії дозволяє визначити точну концентрацію компонентів у зразках. У цьому уроці ми розглянемо різні методи кількісного аналізу, такі як титрування, спектрофотометрія і мас-спектрометрія. Титрування є процесом додавання реактиву до зразка до досягнення точки еквівалентності, що дозволяє точно визначити концентрацію компонента. Спектрофотометрія використовує вимірювання поглинання світла певної довжини хвилі для оцінки концентрації речовин. Мас-спектрометрія дозволяє визначити молекулярну масу і склад зразка шляхом іонізації і вимірювання маси іонів. Вивчимо основи кожного з цих методів, а також їхні переваги та обмеження. Кількісний аналіз є важливим для точного визначення складу та концентрації компонентів у зразках, що є необхідним для контролю якості, досліджень і промислових застосувань.`
+  },
+  {
+    "id": 4,
+    "name": "Хроматографічні методи",
+    "content": `Хроматографія є потужною технікою для розділення компонентів суміші на основі їхніх фізико-хімічних властивостей. У цьому уроці ми розглянемо різні види хроматографії, включаючи тонкошарову хроматографію (ТСХ), рідинну хроматографію (РХ) і газову хроматографію (ГХ). Тонкошарова хроматографія використовує тонкий шар адсорбенту для розділення компонентів зразка, а рідинна хроматографія дозволяє розділити компоненти зразка за допомогою рідкої рухомої фази. Газова хроматографія відрізняється тим, що використовує газ як рухому фазу для розділення компонентів. Вивчимо принципи роботи хроматографічних колонок, стаціонарних і рухомих фаз, а також інтерпретацію хроматографічних даних. Хроматографія є важливим інструментом для аналізу складних сумішей в хімії, біології та медицині.`
+  },
+  {
+    "id": 5,
+    "name": "Сучасні аналітичні техніки",
+    "content": `Сучасні аналітичні техніки постійно розвиваються, впроваджуючи нові методи і інструменти для точного аналізу речовин. У цьому уроці ми розглянемо новітні технології, такі як атомно-абсорбційна спектроскопія, мас-спектрометрія з індуктивно зв'язаною плазмою (ICP-MS) і ядерний магнітний резонанс (ЯМР). Атомно-абсорбційна спектроскопія дозволяє визначити концентрацію елементів у зразках шляхом вимірювання поглинання світла атомами. ICP-MS використовується для аналізу металів і інших елементів на дуже низьких концентраціях завдяки високій чутливості і роздільній здатності. ЯМР є технікою, яка дозволяє визначити структуру молекул на основі їхньої взаємодії з магнітним полем. Вивчимо, як ці техніки використовуються для аналізу різних матеріалів, таких як біологічні зразки, довкілля і промислові продукти, а також їхні переваги і обмеження в порівнянні з традиційними методами аналітичної хімії.`
+  }
+
+
         ];
 
         const lessonsContainer = document.getElementById("lessonsContainer");
