--- a/src/pages/dashboard.html
+++ b/src/pages/dashboard.html
@@ -85,9 +85,9 @@
         <form class="event-form" id="eventForm">
           <label for="eventDate">Дата:</label>
           <input type="date" id="eventDate" required>
-          <label for="eventTitle">Название события:</label>
+          <label for="eventTitle">Назва дати:</label>
           <input type="text" id="eventTitle" required>
-          <button type="submit">Добавить событие</button>
+          <button type="submit">Додати дату</button>
         </form>
       </div>
     
